# python-project-140-old

./: Makefile  README.md  makefile  pyproject.toml  requirements.txt
brain_games/: cli.py
brain_games/scripts/:  brain_progression.py  brain-even.py  brain-games.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_prime.py
